<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".LoginPackage.LoginActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo_kemenag"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:text="@string/sipatuh"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/nunito_bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:text="@string/haji"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/nunito_regular" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/shape_border_white"
        android:hint="@string/uname"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="435dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/shape_border_white"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="490dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/shape_button_drk_green"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white" />


    <!--<Button-->
        <!--android:id="@+id/login_petugas"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/yellow"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginHorizontal="20dp"-->
        <!--android:layout_marginBottom="50dp"-->
        <!--android:paddingHorizontal="30dp"-->
        <!--android:text="login petugas" />-->

    <TextView
        android:id="@+id/version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/version_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:fontFamily="@font/nunito_regular" />

    <TextView
        android:id="@+id/kementrian_agama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/kementrian_agama"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:fontFamily="@font/nunito_regular" />

</RelativeLayout>