<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".KedatanganTarwiyah.KedatanganTarwiyah">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/shape_border_white">
                <EditText
                    android:id="@+id/kode_paket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/kode_paket"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:padding="10dp"/>
                <ImageView
                    android:id="@+id/drp_down_kodpak"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="-50dp"
                    android:src="@drawable/ic_drop_down_green"
                    android:layout_weight="5"/>
            </LinearLayout>
            <com.kemenag.sipatuh.PublicPackage.HeightListView
                android:id="@+id/list_kode_paket"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true">
            </com.kemenag.sipatuh.PublicPackage.HeightListView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_border_white">
                <EditText
                    android:id="@+id/no_urut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/no_urut"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
            </LinearLayout>
            <Button
                android:id="@+id/ambil_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_drk_green"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:text="@string/ambil_data"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/shape_border_white"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aktual"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/nunito_bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/tgl_aktual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:layout_weight="1"
                    android:hint="@string/tanggal"
                    android:textSize="16sp"/>
                <ImageView
                    android:id="@+id/bt_datepicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:src="@drawable/ic_date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/waktu_aktual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:layout_weight="1"
                    android:hint="@string/pukul"
                    android:textSize="16sp"/>
                <ImageView
                    android:id="@+id/bt_timepicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:src="@drawable/ic_time"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/shape_border_white"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_jamaah"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/nunito_bold" />
            <com.kemenag.sipatuh.PublicPackage.HeightListView
                android:id="@+id/listAbsensiJemaah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                android:layout_margin="5dp">
            </com.kemenag.sipatuh.PublicPackage.HeightListView>
            <Button
                android:id="@+id/simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_drk_green"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:text="@string/simpan"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>