<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#26721A"
    tools:context=".Kasus.KasusActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_border_white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:text="@string/tgl_kasus"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/tgl_kasus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:padding="15dp"
                android:hint="@string/tgl_kasus"
                android:background="@drawable/rectangle_white"
                android:layout_marginTop="5dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/drp_down_tgl_kasus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_date"
                android:layout_weight="5"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:text="@string/waktu_kasus"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/waktu_kasus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@drawable/rectangle_white"
                android:focusable="false"
                android:hint="@string/waktu_kasus"
                android:layout_marginTop="5dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/drp_down_waktu_kasus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_time"
                android:layout_weight="5"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:text="@string/tempat_kasus"/>
        <EditText
            android:id="@+id/tempat_kasus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/tempat_kasus"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:text="@string/kejadian"/>
        <EditText
            android:id="@+id/kejadian_kasus"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:hint="@string/kejadian"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_white"/>
        <Button
            android:id="@+id/simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_drk_green"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:text="@string/simpan_kasus"/>
    </LinearLayout>
    </ScrollView>

</LinearLayout>