<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="20dp">
        <android.support.v7.widget.CardView
            android:id="@+id/berangkat_tanah_air"
            app:cardElevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/berangkat_tanah_air"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/keberangkatan_tanah_air"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />
        <android.support.v7.widget.CardView
            android:id="@+id/kedatangan_makkah"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/kedatangan_mekkah" />
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/kedatangan_makkah"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />
        <android.support.v7.widget.CardView
            android:id="@+id/kepulangan_arafah"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/kedatangan_arafah"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/kepulangan_arafah"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />

        <android.support.v7.widget.CardView
            android:id="@+id/kedatangan_tanah_air"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/kedatangan_tanah_air" />
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/kedatangan_tanah_air"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/kedatangan_madinah"
            app:cardElevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/kedatangan_madinah"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/kedatngan_madinah"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />
        <android.support.v7.widget.CardView
            android:id="@+id/hotel_transit_makkah"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/hotel_transit"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Hotel \nTransit"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />
        <android.support.v7.widget.CardView
            android:id="@+id/kedatanga_mina"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/kepulangan_mina"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Kepulangan\nMina"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />
        <android.support.v7.widget.CardView
            android:id="@+id/kasus"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/kasus"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/kasus"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginRight="20dp">
        <android.support.v7.widget.CardView
            android:id="@+id/kedatangan_jeddah"
            app:cardElevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/kedatangan_jeddah"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/kedatngan_jeddah"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />
        <android.support.v7.widget.CardView
            android:id="@+id/kedatangan_tarwiyah"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/kedatangan_tarwiyah"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/kepulangan_tarwiyah"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />

        <android.support.v7.widget.CardView
            android:id="@+id/kepulangan_arab"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/kepulangan_as"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/kepulangan_arab"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/nunito_regular" />

    </LinearLayout>

</LinearLayout>
    </LinearLayout>
</ScrollView>

